Fixed warnings (based of the IDE suggestions)