@@ -27,9 +27,7 @@ public abstract class AbstractMinecartEntityMixin extends Entity implements Mine
 	private boolean isChunkLoader = false;
 	@Unique
 	private int particleTicker = 0;
-	@Unique
-	private final int particleInterval = 3;
-	@Unique
+    @Unique
 	private ChunkPos lastChunkPos = null;
 
 	public AbstractMinecartEntityMixin(EntityType<?> type, World world) {
@@ -61,7 +59,7 @@ public abstract class AbstractMinecartEntityMixin extends Entity implements Mine
 		if (minecartType == EntityType.CHEST_MINECART) {
 			//noinspection DataFlowIssue - We're sure this is a chest because of the if statement.
 			var entity = (ChestMinecartEntity)(Object)this;
-			var firstSlot = entity.getInventory().get(0);
+			var firstSlot = entity.getInventory().getFirst();
 
 			var hasCustomName = firstSlot.get(DataComponentTypes.CUSTOM_NAME) != null;
 			
@@ -70,7 +68,7 @@ public abstract class AbstractMinecartEntityMixin extends Entity implements Mine
 				scripts_chunk_loaders$setChunkLoaderName(name);
 				return;
 			}
-		};
+		}
 
         if (ScriptsChunkLoadersMod.shouldDefaultRenameLoaders(getWorld())) {
             scripts_chunk_loaders$setChunkLoaderName("Chunk Loader");
@@ -87,6 +85,8 @@ public abstract class AbstractMinecartEntityMixin extends Entity implements Mine
 		scripts_chunk_loaders$stopChunkLoader(false);
 		this.lastChunkPos = null;
 	}
+
+    @Unique
 	public void scripts_chunk_loaders$stopChunkLoader(Boolean keepName) {
 		this.isChunkLoader = false;
 
@@ -148,7 +148,7 @@ public abstract class AbstractMinecartEntityMixin extends Entity implements Mine
 	@Unique
 	private void tickParticles() {
 		this.particleTicker += 1;
-		if (this.particleTicker >= particleInterval) {
+        if (this.particleTicker >= 3) {
 			this.particleTicker = 0;
 			this.spawnParticles();
 		}
